# clickable

./: .gitignore  .gitlab-ci.yml  BASH_COMPLETION.md  MANIFEST.in  README.md  bash_completion  clickable  clickable-dev  clickable.py  publish_deb.sh  setup.cfg  setup.py  snapcraft.yml  usdk-target.wrapper
clickable/: __init__.py  clickable.schema  config.py  container.py  device.py  exceptions.py  libconfig.py  logger.py  utils.py
clickable/build_templates/: base.py  cmake.py  cordova.py  custom.py  go.py  make.py  pure.py  qmake.py  rust.py  rust.py.bk
clickable/builders/: base.py  cmake.py  custom.py  make.py  pure.py  qmake.py  rust.py
clickable/commands/: base.py  build-libs.py  build.py  build_libs.py  clean-libs.py  clean.py  clean_build.py  clean_libs.py  click_build.py  create.py  desktop.py  devices.py  display_on.py  gdb.py  gdbserver.py  ide.py  init_app.py  install.py  launch.py  log.py  logs.py  no_lock.py  publish.py  review.py  run.py  screenshots.py  setup.py  setup_docker.py  setup_lxd.py  shell.py  test.py  test_libs.py  update.py  update_docker.py  writable_image.py
clickable/config/: clickable.schema  config.py  constants.py  file_helpers.py  libconfig.py  project.py
clickable/system/: access.py  query.py  require.py
debian/: changelog  clickable.install  control  copyright  rules
docker/build-deb/: Dockerfile
docs/: Makefile  app-templates.rst  autobuild.sh  build-templates.rst  builders.rst  changelog.rst  clickable-json.rst  commands.rst  conf.py  continuous-integration.rst  debugging.rst  env-vars.rst  getting-started.rst  index.rst  install.rst  usage.rst
docs/_static/: version.json
docs/_templates/: layout.html
scripts/: build_deb.sh  docker_test.sh  publish_deb.sh  publish_pypi.sh
snap/: snapcraft.yaml
tests/build_templates/: test_cmake.py  test_cordova.py  test_custom.py  test_go.py  test_pure.py  test_qmake.py
tests/build_templates/apps/cmake-test/: CMakeLists.txt  clickable.json  cmake-test.apparmor  cmake-test.desktop  manifest.json.in
tests/build_templates/apps/cmake-test/plugins/: CMakeLists.txt
tests/build_templates/apps/cmake-test/plugins/Pluginname/: CMakeLists.txt  plugin.h
tests/build_templates/apps/cmake-test/qml/: Main.qml
tests/commands/: test_build.py  test_clean.py  test_click_build.py  test_create.py  test_desktop.py  test_devices.py  test_install.py  test_launch.py  test_log.py  test_logs.py  test_no_lock.py  (+6 more)
(+75 files in other folders)
